[gd_scene load_steps=8 format=3 uid="uid://dr51qu20aa77"]

[ext_resource type="Script" uid="uid://m81mshlqb0l7" path="res://Game/scripts/Card.gd" id="1_p5v87"]
[ext_resource type="PackedScene" uid="uid://d3lfyqqnp8p75" path="res://Shared/scenes/Card2D.tscn" id="2_card2d"]
[ext_resource type="PackedScene" uid="uid://i36vftw0aqxr" path="res://Shared/scenes/Card2D_Small.tscn" id="3_020dk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_card"]
size = Vector3(0.66, 0.05, 0.89)

[sub_resource type="QuadMesh" id="QuadMesh_card2d"]
size = Vector2(0.66, 0.89)
orientation = 1

[sub_resource type="QuadMesh" id="QuadMesh_highlight"]
size = Vector2(0.7, 0.95)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_highlight"]
no_depth_test = true
shading_mode = 0
disable_ambient_light = true
albedo_color = Color(1, 0.8, 0, 1)
disable_receive_shadows = true

[node name="Card" type="Node3D"]
script = ExtResource("1_p5v87")

[node name="CardRepresentation" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CardRepresentation"]
shape = SubResource("BoxShape3D_card")

[node name="Card2DDisplay" type="MeshInstance3D" parent="CardRepresentation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.003, 0)
mesh = SubResource("QuadMesh_card2d")

[node name="SubViewport" type="SubViewport" parent="CardRepresentation/Card2DDisplay"]
size = Vector2i(150, 200)
render_target_update_mode = 1

[node name="Card2D" parent="CardRepresentation/Card2DDisplay/SubViewport" instance=ExtResource("2_card2d")]

[node name="Card2D_Small" parent="CardRepresentation/Card2DDisplay/SubViewport" instance=ExtResource("3_020dk")]

[node name="HighlightMesh" type="MeshInstance3D" parent="CardRepresentation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.002, 0)
visible = false
mesh = SubResource("QuadMesh_highlight")
surface_material_override/0 = SubResource("StandardMaterial3D_highlight")
